Fixes issue where legacy (non-generational) ZGC logs that are generated using -Xlog:gc instead of -Xlog:gc* cannot be parsed.